[package]
name = "pfp-distribution"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
needletail = "0.6"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-minimizers = "1.4"
simd-minimizers-alt = { package = "simd-minimizers", git = "https://github.com/rust-seq/simd-minimizers.git", branch = "rot7" }

[features]
alt = []
mul = []

[profile.release]
opt-level = 3
lto = "thin"
