[package]
name = "pfp-distribution"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
needletail = "0.6"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-minimizers = "2.2"

[features]
nthash = []
mulhash = []

[profile.release]
opt-level = 3
lto = "thin"
